--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# Crypto Text Trader
+# Crypto Text Trader	
 Trade crypto from your phone, quickly, easily, seemlessly
 
 ## How to use
@@ -8,8 +8,8 @@ Create a binance account, and get the apikey and apisecret. Sign up using the fo
    -d '{"number":"<mynumber>","apikey":"<api_key>", "apisecret", "<api_secret>"}'`  
 
 Execute trades with the following commands:  
-- Buy coin: BUY <coin> <amount> 
-- Sell coin: SELL <coin> <amount> 
-- Get current price of coin (in USDT): GET <coin>  
-- Get current balance (in USDT): BALANCE <coin>  
+- Buy coin: `BUY <coin> <amount> `
+- Sell coin: `SELL <coin> <amount> `
+- Get current price of coin (in USDT): `GET <coin>  `
+- Get current balance (in USDT): `BALANCE <coin>  `
 
